update readme for usage with Java11 and Javafx 13